adminka crud end
